--- a/tous/css/gallerie.css
+++ b/tous/css/gallerie.css
@@ -2006,16 +2006,24 @@ form {
 
 /*.......fotter..page4...*/
 /*....*/
-@media (min-width: 600px) {
-  #header #tete .nav {
-    display: inline !important;
+@media screen and (orientation: portrait) {
+  body {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    height: 27%;
+    margin: 12px;
   }
-  .NJE_icon_menu, .NJE_icon_menu1 {
-    display: none !important;
+  .logo {
+    height: 120px;
+  }
+  #header #tete {
+    margin-left: -12px;
+    margin-top: -10px;
   }
 }
 
-@media (max-width: 600px) {
+@media screen and (orientation: portrait) {
   /*.....media header...*/
   #header #tete .nav {
     position: absolute;
@@ -2084,9 +2092,10 @@ form {
   }
   /*....media footer....*/
   #footer {
-    display: list-item;
-    margin-top: 19%;
-    height: 103%;
+    height: 597px;
+    margin-left: -343px;
+    margin-top: 274%;
+    width: 978px;
   }
   #footer .txt {
     font-size: 24px;
@@ -2094,6 +2103,8 @@ form {
   }
   #footer .footer1 {
     position: absolute;
+    margin-left: 150px;
+    margin-top: 64px;
   }
   #footer .txt2 {
     position: relative;
@@ -2118,22 +2129,22 @@ form {
   #footer .text {
     position: relative;
     top: -50px;
-    left: 140px;
+    left: 294px;
   }
   #footer .text2 {
     position: relative;
     top: -37px;
-    left: 141px;
+    left: 294px;
   }
   #footer .text3 {
     position: relative;
     top: -33px;
-    left: 133px;
+    left: 294px;
   }
   #footer .text4 {
     position: relative;
     top: -33px;
-    left: 142px;
+    left: 294px;
   }
   #footer .texte {
     position: relative;
@@ -2158,31 +2169,31 @@ form {
   #footer .textee {
     position: relative;
     top: 173px;
-    left: 59px;
+    left: 215px;
   }
   #footer .imge {
     position: relative;
     top: 189px;
-    left: 182px;
+    left: 372px;
     width: 27px;
   }
   #footer .imge2 {
     position: relative;
     top: 189px;
     width: 27px;
-    left: 46px;
+    left: 212px;
   }
   #footer .imge3 {
     position: relative;
     width: 27px;
     top: 189px;
-    left: 115px;
+    left: 317px;
   }
   #footer .imge4 {
     position: relative;
     width: 27px;
     top: 189px;
-    left: -22px;
+    left: 155px;
   }
   #footer .txtt {
     position: relative;
@@ -2191,20 +2202,27 @@ form {
   }
   /*.....container..page1..*/
   #container {
-    height: 159%;
+    height: 922px;
+    margin-top: -61%;
+    position: absolute;
   }
   #container .titr2 {
+    margin-top: -151px;
+    /* margin-top: -72px; */
     font-size: 16px;
-    left: 27px;
+    position: absolute;
+    /* left: 27px; */
+    margin-right: 34%;
   }
   #container .main {
     height: 175px;
+    position: relative;
   }
   #container .prev {
-    margin-left: -43px;
+    margin-left: -103px;
   }
   #container .next {
-    margin-right: -40px;
+    margin-right: -94px;
   }
   #container .row {
     display: none;
@@ -2212,9 +2230,18 @@ form {
   #container .titr3 {
     font-size: 16px;
     margin-top: 119px;
+    position: absolute;
+    margin-top: 33%;
+    margin-right: 50%;
   }
   #container .main1 {
     height: 175px;
+    position: relative;
+    /* width: 133%; */
+    margin-top: 32%;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   #container .prev1 {
     margin-left: -43px;
@@ -2226,45 +2253,54 @@ form {
     display: none;
   }
   #container .paragraphe {
-    font-size: 17px;
     margin-top: 46px;
   }
   #container .paragraphe1 {
     display: none;
   }
   #container .paragraphe2 {
-    font-size: 13px;
     text-align: center;
     position: absolute;
-    left: -173px;
   }
   #container .paraphoto {
-    width: 98%;
-    margin-top: 117%;
-    height: 29%;
+    margin-top: 77%;
+    height: 516px;
   }
   .boton {
     display: inline;
+    position: relative;
+    margin-top: 439px;
   }
   .boton .boton1 {
-    width: 19%;
-    margin-top: 276%;
+    width: 207px;
+    font-size: 30px;
+    position: relative;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    margin-left: -26px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-left: 135px;
   }
   .boton .boton2 {
-    width: 19%;
+    width: 207px;
+    font-size: 30px;
+    position: relative;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    margin-left: -266px;
-    margin-top: 18px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-top: 25px;
+    margin-left: -104px;
   }
   /*.....page2...*/
   .page2 {
-    position: relative;
+    position: absolute;
+    margin-top: -14%;
+    height: 48%;
   }
   .page2 .bienvenue {
     font-size: 19px;
@@ -2279,7 +2315,7 @@ form {
   }
   .page2 #validation {
     position: relative;
-    top: 4%;
+    top: 82%;
     height: 69%;
   }
   .page2 #validation .input1 {
@@ -2320,6 +2356,9 @@ form {
   .page2 .parag {
     display: none;
   }
+  .page2 .forfait {
+    margin-left: 12px;
+  }
   .page2 .forfait1 {
     display: none;
   }
@@ -2329,32 +2368,50 @@ form {
   .page2 .forfait5 {
     display: none;
   }
+  .page2 .forfait3 {
+    display: none;
+  }
+  .page2 .forfait4 {
+    display: none;
+  }
   .page2 .offre {
-    font-size: 15px;
-    margin-top: -524PX;
+    margin-top: 72%;
+    text-align: center;
   }
   .page2 .offre1 {
-    font-size: 14px;
     margin-top: -15px;
+    text-align: center;
   }
   .page2 .Offre2 {
-    font-size: 11px;
     margin-top: -85px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    left: -99px;
     text-align: center;
+    margin-left: 56%;
   }
   .page2 .forfait6 {
-    display: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .page2 .forfait6 .imagee {
+    position: absolute;
+    margin-top: 73%;
+    margin-left: 153px;
+    width: 225%;
+  }
+  .page2 .forfait6 .overlay {
+    position: relative;
+    margin-left: -524px;
+    margin-top: 93%;
   }
   .page2 .btnred {
-    height: 35px;
-    width: 99px;
+    height: 53px;
+    width: 147px;
     margin-top: -107px;
     font-size: 11px;
-    margin-left: 99px;
+    margin-left: 308px;
   }
   /*........*/
   #reservation {
