--- a/tous/css/gallerie.scss
+++ b/tous/css/gallerie.scss
@@ -1844,23 +1844,30 @@ font-size: 22px;
 
 
 
-@media (min-width:600px)   {
+@media screen and  (orientation:portrait) {
 
-
-#header #tete .nav
-{
-display: inline !important ;
-}
-.NJE_icon_menu , .NJE_icon_menu1{
-display: none !important;}
-
+body{
+  display: flex;
+  height: 27%;
+  margin: 12px;
 
 }
 
+.logo{
+  height: 120px;
+}
+#header #tete{
+
+  margin-left: -12px;
+  margin-top: -10px;
 
 
 
-@media (max-width:600px) {
+}
+}
+
+
+@media screen and  (orientation:portrait) {
 
 /*.....media header...*/
 #header #tete .nav {
@@ -1935,9 +1942,12 @@ letter-spacing: inherit;
 
 /*....media footer....*/
 #footer {
-display: list-item;
-margin-top: 19%;
-height: 103%;
+
+    height: 597px;
+    margin-left: -343px;
+    margin-top: 274%;
+    width: 978px;
+
 
 & .txt {
 font-size:24px ;
@@ -1945,7 +1955,9 @@ margin-left: 18px;
 }
 
 & .footer1 {
-position: absolute;
+  position: absolute;
+  margin-left: 150px;
+  margin-top: 64px;
 }
 & .txt2 {
 position: relative;
@@ -1971,22 +1983,28 @@ left: 72px;
 & .text {
 position: relative;
 top: -50px;
-left: 140px
+left: 294px;
 }
 & .text2 {
 position: relative;
 top: -37px;
-left: 141px; 
+
+left: 294px;
+ 
 }
 & .text3 {
 position: relative;
 top: -33px;
-left: 133px;
+
+left: 294px;
+
 }
 & .text4 {
 position: relative;
 top: -33px;
-left: 142px;
+
+left: 294px;
+
 }
 & .texte {
 position: relative;
@@ -2012,31 +2030,31 @@ left: -207px;
 & .textee {
 position: relative;
 top: 173px;
-left: 59px;
+left: 215px;
 }
 & .imge {
 position: relative;
 top: 189px;
-left: 182px;
+left: 372px;
 width: 27px;
 }
 & .imge2 {
 position: relative;
 top: 189px;
 width: 27px;
-left: 46px;
+left: 212px;
 }
 & .imge3 {
 position: relative;
 width: 27px;
 top: 189px;
-left: 115px;
+left: 317px;
 }
 & .imge4 {
 position: relative;
 width: 27px;
 top: 189px;
-left: -22px;
+left: 155px;
 }
 
 & .txtt {
@@ -2050,21 +2068,31 @@ left: 106px;
 
 /*.....container..page1..*/
 #container {
-  height: 159%;
+
+  height: 922px;
+  margin-top: -61%;
+  position: absolute;
+
 
 & .titr2 {
-font-size: 16px;
-left: 27px;
+margin-top: -151px;
+    /* margin-top: -72px; */
+    font-size: 16px;
+    position: absolute;
+    /* left: 27px; */
+    margin-right: 34%;
 }
 & .main {
 height: 175px;
+position: relative;
 }
 & .prev{
-  margin-left: -43px;
+  margin-left: -103px;
 
 }
 & .next {
-  margin-right: -40px; 
+  margin-right: -94px;
+
 }
 
 & .row {
@@ -2073,10 +2101,18 @@ height: 175px;
 & .titr3 {
   font-size: 16px;
   margin-top: 119px;
+  position: absolute;
+  margin-top: 33%;
+  margin-right: 50%;
 }
 & .main1{
   height: 175px;
+  position: relative;
+  /* width: 133%; */
+  margin-top: 32%;
+  justify-content: center;
 }
+
 & .prev1{
   margin-left: -43px;
 }
@@ -2087,47 +2123,63 @@ height: 175px;
   display: none;
 }
 & .paragraphe {
-   font-size: 17px;
+  
     margin-top: 46px;
 }
 & .paragraphe1{
  display: none;
 
 }  
+
 & .paragraphe2{
-  font-size: 13px;
   text-align: center;
-   position: absolute;
-  left: -173px;
+  position: absolute;
 
 } 
 & .paraphoto{
-    width: 98%;
-    margin-top: 117%;
-    height: 29%;
-}
+  margin-top: 77%;
+  height: 516px;
 }
 
-& .boton{
+
+}
+
+
+& .boton {
+
   display: inline;
+  position: relative;
+  margin-top: 439px;
+
   
   & .boton1 {
-    width: 19%;
-    margin-top: 276%;
+    width: 207px;
+    font-size: 30px;
+    position: relative;
+   display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    margin-left: -26px;
+    justify-content: center;
+    margin-left: 135px;
+   
   }
   & .boton2 {
-    width: 19%;
+    width: 207px;
+    font-size: 30px;
+    position: relative;
     display: flex;
-    margin-left: -266px;
-    margin-top: 18px;
+    justify-content: center;
+    margin-top: 25px;
+    margin-left: -104px;
   }
 }
 
 /*.....page2...*/
  .page2 {
-   position: relative;
+  position: absolute;
+  margin-top: -14%;
+  height: 48%;
+
 
    & .bienvenue{
     font-size: 19px;
@@ -2142,7 +2194,7 @@ height: 175px;
    }
    & #validation {
     position: relative;
-    top: 4%;
+    top: 82%;
     height: 69%;
    
    & .input1 {
@@ -2181,9 +2233,13 @@ height: 175px;
     margin-left: -51px;
    }
  }
+ 
  & .parag{
   display: none;
  }
+ &  .forfait{
+  margin-left: 12px;
+}
  & .forfait1{
    display: none;
  }
@@ -2193,30 +2249,51 @@ height: 175px;
  & .forfait5 {
    display: none;
  }
+ & .forfait3 {
+  display: none;
+}
+& .forfait4 {
+  display: none;
+}
  & .offre{
-  font-size: 15px;
-  margin-top: -524PX;
+  margin-top: 72%;
+    text-align: center;
  }
  & .offre1{
-   font-size: 14px;
-   margin-top: -15px;
- }
- & .Offre2{
-  font-size: 11px;
-  margin-top: -85px;
-  display: flex;
-  left: -99px;
+  margin-top: -15px;
   text-align: center;
  }
+ & .Offre2{
+  margin-top: -85px;
+  display: flex;
+  text-align: center;
+  margin-left: 56%;
+ }
  & .forfait6 {
-   display: none;
+   display: flex;
+
+
+   & .imagee {
+    position: absolute;
+    margin-top: 73%;
+    margin-left: 153px;
+    width: 225%;
+   }
+   & .overlay {
+    position: relative;
+    margin-left: -524px;
+    margin-top: 93%;
+
+   }
  }
  & .btnred{
-  height: 35px;
-  width: 99px;
+  height: 53px;
+  width: 147px;
   margin-top: -107px;
   font-size: 11px;
-  margin-left: 99px;
+  margin-left: 308px;
+
+
  }
 }
 
