--- a/tous/css/inscrip.scss
+++ b/tous/css/inscrip.scss
@@ -919,22 +919,23 @@ font-style: italic;
 
 
 & .Offre {
-position: relative;
-top: -155px;
-text-align: center;
-font-style: italic;
-font-size: 33px;
-color: inherit;
+  text-align: center;
+  font-style: italic;
+  font-size: 33px;
+  margin-top: 54%;
+  color: inherit;
 }
 & .Offre1 {
-position: relative;
+
 font-style: italic;
 font-size: 18px;
-top: -124px;
+margin-top: 36px;
 text-align: center;
 }
 & .Offre2 {
-position: relative;
+
+  margin-top: 80px;
+
 font-style: italic;
 top: -2px;
 left: 27px;
@@ -1603,22 +1604,21 @@ width: 100%;
                   
                   }
                   & .Offre {
-                    position: relative;
-                    top: -1188px;
                     text-align: center;
                     font-style: italic;
                     font-size: 33px;
+                    margin-top: 54%;
                     color: inherit;
                     }
                     & .Offre1 {
-                    position: relative;
+                 
                     font-style: italic;
                     font-size: 18px;
-                    top: -1135px;
+                    margin-top: 36px;
                     text-align: center;
                     }
                     & .Offre2 {
-                    position: relative;
+                      margin-top: 80px;
                     font-style: italic;
                     top: -1000px;
                     left: 27px;
@@ -1627,7 +1627,7 @@ width: 100%;
                     
                     }
                     & .Btnred {
-                    position: relative;
+                      margin-top: 61px;
                     width: 18%;
                     height: 10%;
                     border-radius: 51px;
@@ -1646,11 +1646,10 @@ width: 100%;
                     cursor: pointer;
                     }
                   & .Forfait10 {
-                    position: relative;
+                  
                     width: 27%;
                     max-width: 290px;
-                    top: -1010px;
-                    left: 55px;
+                    margin-left: 42px;
                 
                     }
                     & .Imagee {
@@ -2016,7 +2015,7 @@ img.avatar {
   }
   #header #tete{
   
-    margin-left: -12px;
+    margin-left: 11px;
     margin-top: -10px;
   
   
@@ -2397,7 +2396,10 @@ height: 175px;
 
 #page4 .Forfait10 {
   display: flex;
-  margin-top: -75%;
+  position: absolute;
+  margin-top: 27%;
+  margin-left: 2%;
+
 
   & .Imagee {
    position: absolute;
@@ -2412,29 +2414,39 @@ height: 175px;
   }
 }
  #page4 .Btnred{
- height: 53px;
- width: 147px;
- margin-top: -107px;
- font-size: 11px;
- margin-left: 308px;
+  height: 53px;
+  width: 147px;
+  position: absolute;
+  margin-top: 259%;
+  font-size: 11px;
+  margin-left: 29%;
 
 
 
 }
 
 #page4 .Offre {
-  margin-top: 192%;
+  margin-top: 78%;
+  margin-left: 32%;
+  position: absolute;
+ 
   text-align: center;
 }
 #page4 .Offre1 {
-  margin-top: -15px;
   text-align: center;
+    position: absolute;
+    margin-top: 85%;
+    margin-left: 29%;
+
 }
 #page4 .Offre2{
-  margin-top: -85px;
-  display: flex;
-  text-align: center;
-  justify-content: center;
+  position: absolute;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    margin-top: 250%;
+    margin-left: 7%;
+    text-align: center;
+   
 }
 .modal{
   text-align: center;
